--- a/rebar.config
+++ b/rebar.config
@@ -2,5 +2,6 @@
 %% ex: ts=4 sw=4 ft=erlang et
 {erl_opts, [
 	warnings_as_errors,
-	warn_export_all
+	warn_export_all,
+	{platform_define, "^R14", "NO_CALLBACKS"}
 ]}.
