Fix wrong define type

--- a/rebar.config
+++ b/rebar.config
@@ -3,5 +3,5 @@
 {erl_opts, [
 	warnings_as_errors,
 	warn_export_all,
-	{platform_define, "^R14", "no_callbacks"}
+	{platform_define, "^R14", no_callbacks}
 ]}.
